fix(ListComponents): don’t stretch image

--- a/Components/ListComponents/_style.scss
+++ b/Components/ListComponents/_style.scss
@@ -30,6 +30,7 @@ flynt-component[name='ListComponents'] {
       width: 100%;
 
       .image {
+        height: auto;
         position: absolute;
 
         &--isSmallerThanWrapper {
